# modcom-server

./: DesignOverview.md  Makefile  Makefile.in  ProjectHome.md  base.c  base.h  basemanager.c  basemanager.h  basemanager.h.gch  composer.c  composer.h  config.c  config.h  config.status  configmanager.c  configmanager.h  configure.ac  controller.c  controller.h  data.h  dispatcher.c  dispatcher.h  dispatchmanager.c  dispatchmanager.h  error.h  general.h  libtool  loader.c  loader.h  modcom-server.c  modcom-server.cfg  modcom.cfg  modulemanager.c  modulemanager.h  msg.h  plugin.h  pluginloader.c  pluginmanager.c  pluginmanager.h  receivemanager.c  (+8 more)
branches/release_0/: Makefile  Makefile.am  Makefile.in  aclocal.m4  base.c  base.h  basemanager.c  basemanager.h  composer.c  configmanager.c  configmanager.h  configure  controller.c  controller.h  data.h  dispatcher.c  dispatcher.h  dispatchmanager.c  dispatchmanager.h  error.h  general.h  loader.c  loader.h  modcom-server.c  modcom-server.cfg  modcom.cfg  modulemanager.c  msg.h  plugin.h  pluginloader.h  pluginmanager.c  pluginmanager.h  receivemanager.c  receivemanager.h  receiver.c  receiver.h  sendermanager.c  thread.h  threadmanager.c  threadmanager.h
branches/release_0/plugins/: Makefile  com.c  com.h  file.c  null.c  plugin.h  tcpip.c  tcpipbak.c  tcpipbak.h
branches/release_1/: Makefile  base.c  base.h  composer.h  config.c  (+13 more)
diagrams/: modcom-server.zargo
plugins/: Makefile  bluetooth.c  com.c  com.h  common.h  file.c  file.h  interface.h  null.c  null.h  plugin.h  tcpip.c  tcpip.h
wiki/: DesignOverview.wiki
(+14 files in other folders)
